; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_omap3isp_preview_busy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_isppreview.c_omap3isp_preview_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp_prev_device = type { i32 }
%struct.isp_device = type { i32 }

@OMAP3_ISP_IOMEM_PREV = common dso_local global i32 0, align 4
@ISPPRV_PCR = common dso_local global i32 0, align 4
@ISPPRV_PCR_BUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap3isp_preview_busy(%struct.isp_prev_device* %0) #0 {
  %2 = alloca %struct.isp_prev_device*, align 8
  %3 = alloca %struct.isp_device*, align 8
  store %struct.isp_prev_device* %0, %struct.isp_prev_device** %2, align 8
  %4 = load %struct.isp_prev_device*, %struct.isp_prev_device** %2, align 8
  %5 = call %struct.isp_device* @to_isp_device(%struct.isp_prev_device* %4)
  store %struct.isp_device* %5, %struct.isp_device** %3, align 8
  %6 = load %struct.isp_device*, %struct.isp_device** %3, align 8
  %7 = load i32, i32* @OMAP3_ISP_IOMEM_PREV, align 4
  %8 = load i32, i32* @ISPPRV_PCR, align 4
  %9 = call i32 @isp_reg_readl(%struct.isp_device* %6, i32 %7, i32 %8)
  %10 = load i32, i32* @ISPPRV_PCR_BUSY, align 4
  %11 = and i32 %9, %10
  ret i32 %11
}

declare dso_local %struct.isp_device* @to_isp_device(%struct.isp_prev_device*) #1

declare dso_local i32 @isp_reg_readl(%struct.isp_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
